8274329: Fix non-portable HotSpot code in MethodMatcher::parse_method_pattern

Backport-of: c833b4d130fabfa6a6f3a38313f76eb7e392c6a5